--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Home
     </div>
     {% endif %}  
 
-    {{ post.content | strip_html | truncatewords:10 }}
+    {{ post.content  |truncatewords:10| strip_html }}
   </div>
   {% endfor %}
 </div>
